vitrail-pg-macros/tests/ui/fail/delete_not_without_variables.stderr
error: delete filters using `eq(...)` or `not(...)` require `#[vitrail(variables = YourVariablesType)]`
  --> tests/ui/fail/delete_not_without_variables.rs:20:8
   |
20 | struct DeletePostsByExcludedTitle;
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `DeletePostsByExcludedTitle: vitrail_pg_core::DeleteManyModel` is not satisfied
  --> tests/ui/fail/delete_not_without_variables.rs:23:49
   |
23 |     let _ = crate::delete_schema::delete_many::<DeletePostsByExcludedTitle>();
   |                                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `vitrail_pg_core::DeleteManyModel` is not implemented for `DeletePostsByExcludedTitle`
  --> tests/ui/fail/delete_not_without_variables.rs:20:1
   |
20 | struct DeletePostsByExcludedTitle;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `delete_many`
  --> tests/ui/fail/delete_not_without_variables.rs:5:1
   |
 5 | / schema! {
 6 | |     name delete_schema
 7 | |
 8 | |     model post {
...  |
12 | | }
   | |_^ required by this bound in `delete_many`
   = note: this error originates in the macro `schema` (in Nightly builds, run with -Z macro-backtrace for more info)
